ReplicaSet/rs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rs-service
spec:
  selector:
    app: k8s-env
    env: development
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
